--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/odometer-theme-default.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-	<title>Prathamesh M Patwardhan - Portfolio</title>
+	<title>Ashnoor Maan - Portfolio</title>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
@@ -67,7 +67,7 @@
                             <a href="https://www.facebook.com/prathameshm.patwardhan?mibextid=ZbWKwL" class="mr-3">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/prathameshpatwardhan" class="mr-3">
+                            <a href="https://www.linkedin.com/in/ashnoor-maan-a6694b225/" class="mr-3">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                             <!--<a href="https://www.youtube.com/" class="mr-3">
@@ -76,18 +76,17 @@
                             <a href="#" class="mr-3">
                                 <i class="fab fa-slack"></i>
                             </a>-->
-                            <a href="https://www.instagram.com/serene_blue04/" class="mr-3">
+                            <!--<a href="https://www.instagram.com/serene_blue04/" class="mr-3">
                                 <i class="fab fa-instagram"></i>
-                            </a>
+                            </a>-->
                         </figure>
 
                         <!--TITLE -->
-                        <h1>I am Prathamesh M Patwardhan</h1>
+                        <h1>I am Ashnoor Maan</h1>
                         <h1 class="ts-bubble-border">
                             <span class="ts-title-rotate">
                                 <span class="active">Data Science Enthusiast</span>
                                 <span>Machine Learning</span>
-                                <span>Sportsman</span>
                                 <span>Creative Person</span>
                                 
                             </span>
@@ -328,23 +327,22 @@
                         <div class="col-md-6">
                             <h4 class="ts-bubble-border">Hello There ! !</h4>
                             <p>
-                                I am Prathamesh Mukul Patwardhan, hailing from Nagpur, Maharashtra. Currently, I am pursuing a BTech.
-                                in Computer Science Engineering at SRMIST Kattankulathur, Chennai. I completed my 10th and 12th grade
-                                 from CBSE affiliated schools in Raipur, Chhattisgarh. In terms of coding, I possess strong skills in
-                                HTML and CSS, and I have gained experience in Python as well. My current focus of study is to become a
-                                 Data Scientist, which involves working with languages such as SQL, R, and Python. I am a team player 
-                                 and excel at collaborating effectively with others to achieve common goals. Additionally, I have a
-                                  passion for sports, particularly badminton, and have developed skills in that area as well.       
+                                I am Ashnoor Maan, hailing from Fazilka, Punjab. Currently, I am pursuing a BTech.
+                                in Computer Science Engineering at SRMIST Kattankulathur, Chennai. I completed my 10th grade
+                                from CBSE affiliated schools in Fazilka and my 12th grade in New Delhi. In terms of coding, I possess strong skills in
+                                HTML and CSS, and I have gained experience in Python and C++ as well. My current focus of study is to become a
+                                Data Scientist, which involves working with languages such as SQL, R, and Python. I am a team player 
+                                 and excel at collaborating effectively with others to achieve common goals.       
                             </p>
                             <dl class="ts-column-count-2">
                                 <dt>Name:</dt>
-                                <dd>Prathamesh Mukul Patwardhan</dd>
+                                <dd>Ashnoor Maan</dd>
                                 <dt>Phone:</dt>
-                                <dd>+91 78989081238</dd>
+                                <dd>+91 9464906116</dd>
                                 <dt>Email:</dt>
-                                <dd>pmp31104@gmail.com</dd>
+                                <dd>maanashnoor03@gmail.com</dd>
                                 <dt>LinkedIn:</dt>
-                                <dd>linkedin.com/in/prathameshpatwardhan</dd>
+                                <dd>www.linkedin.com/in/ashnoor-maan-a6694b225/</dd>
                             </dl>
                             <hr class="ts-hr-light mb-5">
                             <a href="#contact" class="ts-btn-effect mr-2">
