--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="col-md-8">
                         <!--SOCIAL ICONS-->
                         <figure class="ts-social-icons mb-4">
-                            <a href="https://www.facebook.com/prathameshm.patwardhan?mibextid=ZbWKwL" class="mr-3">
+                            <!--<a href="https://www.facebook.com/prathameshm.patwardhan?mibextid=ZbWKwL" class="mr-3">
                                 <i class="fab fa-facebook"></i>
-                            </a>
+                            </a>-->
                             <a href="https://www.linkedin.com/in/ashnoor-maan-a6694b225/" class="mr-3">
                                 <i class="fab fa-linkedin"></i>
                             </a>
@@ -715,7 +715,7 @@
                             <h5>Address</h5>
                             <div class="ts-opacity__50">
                                 <a href="https://www.google.com/maps/place/Estancia+Tower+5/@12.8265673,80.0490445,17z/data=!3m1!4b1!4m6!3m5!1s0x3a52f70bae0dd8cf:0x647074a5e89fe9bd!8m2!3d12.8265621!4d80.0516194!16s%2Fg%2F11bxg5tr63?entry=ttu&g_ep=EgoyMDI0MTAxMy4wIKXMDSoASAFQAw%3D%3D">
-                                <figure class="mb-0">5051 Tower 5 Estancia</figure>
+                                <figure class="mb-0">5042 Tower 5 Estancia</figure>
                                 <figure>Grand Southern Trunk Road, Potheri, Chennai 603203</figure>
                                 </a>
                             </div>
@@ -726,7 +726,7 @@
                             <img src="assets/img/icon-phone-02.png" class="mb-4" alt="">
                             <h5>Phone</h5>
                             <div class="ts-opacity__50">
-                                <a href="tel:07898081238">07898081238</a> 
+                                <a href="tel:9464906116">9464906116</a> 
                             </div>
                             <!--end ts-opacity__50-->
                         </div>
@@ -735,7 +735,7 @@
                             <img src="assets/img/icon-envelope.png" class="mb-4" alt="">
                             <h5>Email</h5>
                             <div class="ts-opacity__50">
-                                <a href="mailto: pmp31104@gmail.com">pmp31104@gmail.com</a>
+                                <a href="mailto: maanashnoor03@gmail.com">maanashnoor03@gmail.com</a>
                             </div>
                             <!--end ts-opacity__50-->
                         </div>
@@ -744,7 +744,7 @@
                             <img src="assets/img/icon-talk-bubble.png" class="mb-4" alt="">
                             <h5>LinkedIn</h5>
                             <div class="ts-opacity__50">
-                               <a href="https://www.linkedin.com/in/prathameshpatwardhan">linkedin.com/in/prathameshpatwardhan/</a> 
+                               <a href="https://linkedin.com/in/ashnoor-maan-a6694b225">linkedin.com/in/ashnoor-maan-a6694b225/</a> 
                             </div>
                             <!--end ts-opacity__50-->
                         </div>
@@ -757,26 +757,26 @@
                             <div class="col-md-4">
                                 <h3>Let’s Connect</h3>
                                 <div class="ts-column-count-sm-2">
-                                    <a href="https://www.facebook.com/prathameshm.patwardhan?mibextid=ZbWKwL" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <!--<a href="https://www.facebook.com/prathameshm.patwardhan?mibextid=ZbWKwL" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-facebook-f"></i>
                                     </span>
                                         <span>Facebook</span>
-                                    </a>
+                                    </a>-->
                                     <!--end link-->
-                                    <a href="https://www.linkedin.com/in/prathameshpatwardhan/" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <a href="https://linkedin.com/in/ashnoor-maan-a6694b225/" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-linkedin"></i>
                                     </span>
                                         <span>LinkedIn</span>
                                     </a>
                                     <!--end link-->
-                                    <a href="https://www.instagram.com/serene_blue04/" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <!--<a href="https://www.instagram.com/serene_blue04/" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-instagram"></i>
                                     </span>
                                         <span>Instagram</span>
-                                    </a>
+                                    </a>-->
                                     <!--end link-->
                                     <!--<a href="#" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
