--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
                                         </p>
                                     </div>
                                     <!--end ts-item-body-->
-                                    <div class="ts-item-footer">
+                                    <!--<div class="ts-item-footer">
                                         <a href="#" data-toggle="modal" data-target="#modal" class="ts-link-arrow-effect">
                                             <span>Read More</span>
                                         </a>
-                                    </div>
+                                    </div>-->
                                     <!--end ts-item-footer-->
                                <!-- </div> -->
                                 <!--end ts-item-content-->
