--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <!--HERO BACKGROUND *************************************************************************************-->
             <div class="ts-background">
-                <div class="ts-background-image" data-bg-image="assets/img/bg-hero.jpg"></div>
+                <div class="ts-background-image" data-bg-image="assets/img/bg-hero1.png"></div>
             </div>
             <!--END HERO BACKGROUND *********************************************************************************-->
 
